@@ -18,6 +18,8 @@ Snapshot
 	  directories (Andreas Plesner)
 	- Make the "back" link on the error page work in IE (Michael Legart)
 	- Fixed the TITLE tag for folder comments (Ondra Kudlik)
+	- New option GalleryUnderscoresToSpaces to convert underscores to
+	  spaces in the listing of directories. (Ondra Kudlik)
 
 0.8 Sun Mar  7 11:22:00 CET 2004
 
